--- a/sass/_fonction.scss
+++ b/sass/_fonction.scss
@@ -14,7 +14,8 @@
     background-color: #9356dc;
     color: #fff;
     font-size: 14px;
-    position: absolute;
+    position: relative;
+    left: -42px;
     padding: 4px 9px;
     border-radius: 50px;
 }
