--- a/sass/_restaurant.scss
+++ b/sass/_restaurant.scss
@@ -1,28 +1,55 @@
-
-
-.card {
-    background-color: #fff;
-    border-radius: 20px;
-    text-decoration: none;
-    color: #000;
-    position: relative;
-     a {
-        img {
-            height: 251px;
-            border-radius: 15px;
-            margin: 20px;
-            }
+.container {
+    background-color: #f3f3f3;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 30px;
+    .card {
+        background-color: #fff;
+        border-radius: 20px;
+        text-decoration: none;
+        color: #000;
+        position: relative;
+        height: 251px;
+        .card__content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
+        .card__image {
+            height: 75%;
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 15px 15px 0px 0px;
+                }
+        }  
+        .card__badge {
+            background-color: #99e2d0;
+            color: #008766;
+            border-radius: 3px;
+            padding: 6px 12px;
+            border-top: 12px;
+            border-right: 12px;
+            display: block;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+        .card__rating {
+            width: 22px;
+            height: 30px;
+            position: absolute;
+            right: 20px;
+            bottom: 20px;
+            font-size: 30px;
+        } 
+    }
 }
 
-.card__badge {
-    background-color: #99e2d0;
-    color: #008766;
-    border-radius: 3px;
-    padding: 6px 12px;
-    border-top: 12px;
-    border-right: 12px;
-}
+
+
+    
 
 
 
