--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,64 +1,9 @@
 /****** General ******/
-@import"_header.scss";
-@import"_fonction.scss";
-@import"_restaurant.scss";
-@import"footer.scss";
+@import"header";
+@import"fonction";
+@import"restaurant";
+@import"footer";
+@import"index";
 
-*{
-    font-family: Roboto, sans-serif;
-    margin: 0;
-    list-style: none;
-}
-
-
-.local {
-    display: flex;
-    justify-content: center;
-    padding: 20px 16px;
-    background-color: #f3f3f3;
-    font-size: 19px;
-    position: relative;
-    i {
-        color: #000;
-        padding-right: 10px;
-    }
-}
-
-.local__icon {
-    margin-right: 16px;
-}
-
-.local__text{
-    font-weight: 700;
-}
-
-.info {
-    padding: 32px;
-    text-align: center;
-    background-color: #fafafa;
-}
-
-p {
-    display: block;
-    margin-block-start: 16px;
-    margin-block-end: 33px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-.info__btn {
-    border: 0;
-    padding: 12px 24px;
-    font-weight: 500;
-    font-size: 17.6px;
-    border-radius: 100px;
-    color: #fff;
-    background-color: #686868;
-    background-image: linear-gradient(0deg, #9356DC, #FF79DA);
-    cursor: pointer;
-    transition-duration: 25s;
-    box-shadow: 4px 4px 10px;
-
-}
 
 
