--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import"restaurant";
 @import"footer";
 @import"index";
-@import"la-palette-du-gout"
-@import"le-délice-des-sens"
-
+@import"la-palette-du-gout";
+@import"le-délice-des-sens";
+@import"la-note-enchantee";
+@import"a-la-francaise";
