--- a/sass/pages/accueil/_index.scss
+++ b/sass/pages/accueil/_index.scss
@@ -4,6 +4,21 @@
     list-style: none;
 }
 
+.info {
+    background-color: #f6f6f6;
+    margin-bottom: 25px;
+    padding: 0px;
+    h1 {
+        color: deeppink;
+    }
+    p {
+        display: block;
+        margin-block-start: 16px;
+        margin-block-end: 33px;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+    }
+}
 
 .local {
     display: flex;
@@ -12,34 +27,15 @@
     background-color: #f3f3f3;
     font-size: 19px;
     position: relative;
-    i {
+    .fa-location-dot {
         color: #000;
         padding-right: 10px;
     }
+    .local__text{
+        font-weight: 700;
+    }
 }
-
-.local__icon {
-    margin-right: 16px;
-}
-
-.local__text{
-    font-weight: 700;
-}
-
-.info {
-    padding: 32px;
-    text-align: center;
-    background-color: #fafafa;
-}
-
-p {
-    display: block;
-    margin-block-start: 16px;
-    margin-block-end: 33px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
+//bouton page d accueil//
 .info__btn {
     border: 0;
     padding: 12px 24px;
@@ -54,3 +50,5 @@ p {
     box-shadow: 4px 4px 10px;
 
 }
+
+
