--- a/sass/main.css
+++ b/sass/main.css
@@ -145,16 +145,27 @@ footer nav a .fa-utensils {
   background-color: #f6f6f6;
   margin-bottom: 25px;
   padding: 0px;
+  height: 215px;
 }
 .info h1 {
-  color: deeppink;
+  color: #000000;
+  font-family: roboto;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28.13px;
+  padding-top: 25px;
+  padding-left: 42px;
 }
 .info p {
-  display: block;
   margin-block-start: 16px;
-  margin-block-end: 33px;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  margin-block-end: 50px;
+  font-family: roboto;
+  font-size: 18px;
+  font-weight: 300;
+  height: 46px;
+  margin-top: 20px;
+  margin-left: 70px;
+  color: #353535;
 }
 
 .local {
@@ -183,13 +194,13 @@ footer nav a .fa-utensils {
   background-color: #686868;
   background-image: linear-gradient(0deg, #9356DC, #FF79DA);
   cursor: pointer;
-  transition-duration: 25s;
+  margin-left: 90px;
   box-shadow: 4px 4px 10px;
 }
 
 .en-tete img {
   width: 100%;
-  height: 330px;
+  height: 275px;
 }
 
 .lien-icon .fa-arrow-left {
@@ -201,18 +212,33 @@ footer nav a .fa-utensils {
   color: #353535;
 }
 
-.container-menu {
+.container-menu2 {
+  width: 100%;
   background-color: #f6f6f6;
+  height: 1295px;
+  border-radius: 45px 45px 0px 0px;
+  margin-top: -64px;
+  position: relative;
+}
+
+.container-menu {
+  width: 100%;
+  background-color: #f6f6f6;
+  height: 1185px;
+  border-radius: 45px 45px 0px 0px;
+  margin-top: -64px;
+  position: relative;
 }
 
 .info__prix2 {
   width: 27px;
   height: 18px;
   line-height: 17.63px;
-  position: absolute;
+  position: relative;
   bottom: 30px;
   font-weight: bold;
   font-size: 15.04px;
+  margin-left: 357px;
 }
 
 .info-title h4 {
@@ -222,7 +248,65 @@ footer nav a .fa-utensils {
   font-size: 28px;
   line-height: 40.82px;
   color: #101010;
+  margin-left: 15px;
+  padding-top: 10px;
 }
 .info-title .fa-heart {
-  color: darkred;
+  color: black;
+  margin-top: -34px;
+  margin-left: 366px;
+  position: absolute;
+  font-size: xx-large;
+}
+
+h5 {
+  font-family: roboto;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 18.75px;
+  color: black;
+  -webkit-text-decoration: underline 3px solid #99e2d0;
+          text-decoration: underline 3px solid #99e2d0;
+  padding-top: 28px;
+  padding-left: 20px;
+}
+
+.card__content2 {
+  height: 69px;
+  border-radius: 15.04px;
+  background-color: white;
+}
+.card__content2 h6 {
+  font-family: roboto;
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 30px;
+  margin-left: 30px;
+  color: black;
+  padding-top: 15px;
+}
+.card__content2 .card__subtile2 {
+  font-family: roboto;
+  font-weight: 300;
+  font-size: 15.04px;
+  line-height: 17.63px;
+  margin-left: 30px;
+  color: black;
+}
+
+.button2 {
+  margin-top: 40px;
+}
+.button2 .button__btn2 {
+  border: 0;
+  padding: 12px 24px;
+  font-weight: 500;
+  font-size: 17.6px;
+  border-radius: 100px;
+  color: #fff;
+  background-color: #686868;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+  cursor: pointer;
+  margin-left: 125px;
+  box-shadow: 4px 4px 10px;
 }/*# sourceMappingURL=main.css.map */
