--- a/sass/pages/accueil/_index.scss
+++ b/sass/pages/accueil/_index.scss
@@ -8,15 +8,26 @@
     background-color: #f6f6f6;
     margin-bottom: 25px;
     padding: 0px;
+    height: 215px;
     h1 {
-        color: deeppink;
+        color: #000000;
+        font-family: roboto;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 28.13px;
+        padding-top: 25px;
+        padding-left: 42px;
     }
     p {
-        display: block;
         margin-block-start: 16px;
-        margin-block-end: 33px;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
+        margin-block-end: 50px;
+        font-family: roboto;
+        font-size: 18px;
+        font-weight: 300;
+        height: 46px;
+        margin-top: 20px;
+        margin-left: 70px;
+        color: #353535;
     }
 }
 
@@ -46,9 +57,8 @@
     background-color: #686868;
     background-image: linear-gradient(0deg, #9356DC, #FF79DA);
     cursor: pointer;
-    transition-duration: 25s;
+    margin-left: 90px;
     box-shadow: 4px 4px 10px;
-
 }
 
 
