--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -1,9 +1,8 @@
-//image des autres pages//
+//images des autres pages//
 .en-tete {
     img {
         width: 100%;
         height: 275px;
-
     }
 }
 
@@ -22,16 +21,7 @@
 //container de la note enchantee//
 .container-menu2 {
     width: 100%;
-    background-color:#f6f6f6;
-    height: 1295px;
-    border-radius: 45px 45px 0px 0px;
-    margin-top: -64px;
-    position: relative;
-}
-
-.container-menu {
-    width: 100%;
-    background-color:#f6f6f6;
+    background-color: #f6f6f6;
     height: 1185px;
     border-radius: 45px 45px 0px 0px;
     margin-top: -64px;
@@ -48,10 +38,10 @@
     font-weight: bold;
     font-size: 15.04px;
     margin-left: 357px;
-  }
+}
 
-  //titre pages//
-  .info-title {
+//totre pages//
+.info-title {
     h4 {
         font-family: shrikhand;
         font-weight: 400;
@@ -69,9 +59,10 @@
         position: absolute;
         font-size: xx-large;
     }
-  }
+}
 
-  h5 {
+
+h5 {
     font-family: roboto;
     font-size: 16px;
     font-weight: 300;
@@ -80,9 +71,9 @@
     text-decoration: underline 3px solid #99e2d0;
     padding-top: 28px;
     padding-left: 20px;
-  }
-  
-  .card__content2 {
+}
+
+.card__content2 {
     height: 69px;
     border-radius: 15.04px;
     background-color: white;
@@ -103,22 +94,21 @@
         margin-left: 30px;
         color: black;
     }
-  }
+}
 
-  .button2 {
+.button2 {
     margin-top: 40px;
-
-  .button__btn2 {
-    border: 0;
-    padding: 12px 24px;
-    font-weight: 500;
-    font-size: 17.6px;
-    border-radius: 100px;
-    color: #fff;
-    background-color: #686868;
-    background-image: linear-gradient(0deg, #9356DC, #FF79DA);
-    cursor: pointer;
-    margin-left: 125px;
-    box-shadow: 4px 4px 10px;
-  }
+    .button__btn2 {
+        border: 0;
+        padding: 12px 24px;
+        font-weight: 500;
+        font-size: 17.6px;
+        border-radius: 100px;
+        color: #fff;
+        background-color: #686868;
+        background-image: linear-gradient(0deg, #9356dc, #ff79da);
+        cursor: pointer;
+        margin-left: 125px;
+        box-shadow: 4px 4px 10px;
+    }
 }
