--- a/sass/main.css
+++ b/sass/main.css
@@ -275,6 +275,8 @@ h5 {
   height: 69px;
   border-radius: 15.04px;
   background-color: white;
+  margin-left: 20px;
+  margin-right: 15px;
 }
 .card__content2 h6 {
   font-family: roboto;
