--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,4 @@
 @import"pages/accueil/restaurant";
 @import"layout/footer";
 @import"pages/accueil/index";
-@import"pages/stylePagesRestaurants.scss"
+@import"stylePagesRestaurants"
