--- a/sass/pages/accueil/_fonction.scss
+++ b/sass/pages/accueil/_fonction.scss
@@ -31,6 +31,7 @@ ul {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 40px;
+    padding: 0;
 }
 
 li {
@@ -38,8 +39,8 @@ li {
     background-color: #f6f6f6;
     box-shadow: 0 4px 8px 5px #fff;
     border-radius: 20px;
-    padding: 28px 35px;
-    margin: 0 14px;
+    padding: 30px 35px;
+    margin: 16px 26px;
     transition: 3s;
 }
 
