--- a/sass/main.css
+++ b/sass/main.css
@@ -142,6 +142,35 @@ footer nav a .fa-utensils {
   list-style: none;
 }
 
+.loader {
+  position: fixed;
+  display: grid;
+  place-items: center;
+  background-color: rgb(242, 188, 242);
+  height: 100vh;
+  inset: 0;
+  z-index: 1;
+  opacity: 1;
+  animation: disappear 200ms 3s forwards;
+}
+.loader span {
+  animation: spin 3s infinite linear;
+  color: aqua;
+}
+
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(360deg);
+  }
+}
 .info {
   background-color: #f6f6f6;
   margin-bottom: 25px;
