--- a/sass/pages/accueil/_index.scss
+++ b/sass/pages/accueil/_index.scss
@@ -4,6 +4,38 @@
     list-style: none;
 }
 
+.loader {
+    $animation-duration: 3s;
+    position: fixed;
+    display: grid;
+    place-items: center;
+    background-color: rgb(242, 188, 242);
+    height: 100vh;
+    inset: 0;
+    z-index: 1;
+    opacity: 1;
+    animation: disappear 200ms $animation-duration forwards;
+   span {
+    animation: spin $animation-duration infinite linear;
+    color: aqua;
+   }
+}
+
+@keyframes disappear {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes spin {
+   0% {
+    transform: rotate(360deg);
+   } 
+}
+
 .info {
     background-color: #f6f6f6;
     margin-bottom: 25px;
