--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -41,12 +41,28 @@
         margin-left: 15px;
         padding-top: 10px;
     }
-    .fa-heart {
+    .far {
         color: black;
         margin-top: -34px;
         margin-left: 366px;
         position: absolute;
         font-size: xx-large;
+        opacity: 1;
+    }
+    .fas {
+        transition: all 0.5s;
+        position: absolute;
+        color: transparent;
+        background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+        background-clip: text;
+        -webkit-background-clip: text;
+        opacity: 0;
+        margin-top: -34px;
+        margin-left: 366px;
+        font-size: xx-large;
+    }
+    &:hover .fas {
+        opacity: 1;
     }
 }
 
