--- a/sass/main.css
+++ b/sass/main.css
@@ -103,6 +103,21 @@ li {
   right: 20px;
   bottom: 20px;
   font-size: 30px;
+  opacity: 1;
+}
+.container .card .fas {
+  transition: all 0.5s;
+  width: 30px;
+  position: absolute;
+  bottom: -3px;
+  color: transparent;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+}
+.container .card:hover .fas {
+  opacity: 1;
 }
 
 footer {
@@ -146,7 +161,7 @@ footer nav a .fa-utensils {
   position: fixed;
   display: grid;
   place-items: center;
-  background-color: rgb(242, 188, 242);
+  background-color: rgba(153, 226, 220, 0.3294117647);
   height: 100vh;
   inset: 0;
   z-index: 1;
@@ -155,7 +170,7 @@ footer nav a .fa-utensils {
 }
 .loader span {
   animation: spin 3s infinite linear;
-  color: aqua;
+  color: rgb(242, 188, 242);
 }
 
 @keyframes disappear {
@@ -219,10 +234,12 @@ footer nav a .fa-utensils {
   font-size: 18px;
   border-radius: 100px;
   color: #fff;
-  background-color: #686868;
   background-image: linear-gradient(0deg, #9356DC, #FF79DA);
   cursor: pointer;
-  box-shadow: 4px 4px 10px;
+}
+.info__btn:hover {
+  opacity: 0.7;
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .en-tete {
@@ -261,12 +278,28 @@ footer nav a .fa-utensils {
   margin-left: 15px;
   padding-top: 10px;
 }
-.info-title .fa-heart {
+.info-title .far {
   color: black;
   margin-top: -34px;
   margin-left: 366px;
   position: absolute;
   font-size: xx-large;
+  opacity: 1;
+}
+.info-title .fas {
+  transition: all 0.5s;
+  position: absolute;
+  color: transparent;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  margin-top: -34px;
+  margin-left: 366px;
+  font-size: xx-large;
+}
+.info-title:hover .fas {
+  opacity: 1;
 }
 
 h5 {
