--- a/sass/pages/accueil/_index.scss
+++ b/sass/pages/accueil/_index.scss
@@ -9,7 +9,7 @@
     position: fixed;
     display: grid;
     place-items: center;
-    background-color: rgb(242, 188, 242);
+    background-color:#99e2dc54 ;
     height: 100vh;
     inset: 0;
     z-index: 1;
@@ -17,7 +17,7 @@
     animation: disappear 200ms $animation-duration forwards;
    span {
     animation: spin $animation-duration infinite linear;
-    color: aqua;
+    color:rgb(242, 188, 242);
    }
 }
 
@@ -82,8 +82,11 @@
     font-size: 18px;
     border-radius: 100px;
     color: #fff;
-    background-color: #686868;
     background-image: linear-gradient(0deg, #9356DC, #FF79DA);
     cursor: pointer;
-    box-shadow: 4px 4px 10px;
+   
+&:hover {
+    opacity: 0.7;
+    box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.5);
+}
 }
