--- a/sass/pages/accueil/_restaurant.scss
+++ b/sass/pages/accueil/_restaurant.scss
@@ -43,9 +43,27 @@
             right: 20px;
             bottom: 20px;
             font-size: 30px;
+            opacity: 1;
+        }
+        .fas {
+            transition: all 0.5s;
+            width: 30px;
+            position: absolute;
+            bottom: -3px;
+            color: transparent;
+            background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+            background-clip: text;
+            -webkit-background-clip: text;
+            opacity: 0;
+        }
+
+        &:hover .fas {
+            opacity: 1;
+        }
         } 
-    }
 }
+
+
 
 
 
