--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -102,6 +102,14 @@ h5 {
     .card__rating2 {
        padding: 10px;
        position: relative;
+       display: flex;
+    }
+    .info__prix2 {
+        margin-right: 15px;
+    }
+    .info__check {
+        background-color: #99E2D0;
+        border-radius: 0px 15px 15px 0px;
     }
 }
 
