--- a/sass/main.css
+++ b/sass/main.css
@@ -340,6 +340,14 @@ h5 {
 .card__content2 .card__rating2 {
   padding: 10px;
   position: relative;
+  display: flex;
+}
+.card__content2 .info__prix2 {
+  margin-right: 15px;
+}
+.card__content2 .info__check {
+  background-color: #99E2D0;
+  border-radius: 0px 15px 15px 0px;
 }
 
 .button2 {
