--- a/sass/main.css
+++ b/sass/main.css
@@ -12,7 +12,12 @@ header .logo a img {
   border-left: 89px;
 }
 
-.fonction h2 {
+.fonction .container {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.fonction .container h2 {
   margin-left: 20px;
 }
 
@@ -56,12 +61,18 @@ li {
   transition: 3s;
 }
 
-.container {
+.restaurants {
   background-color: #f3f3f3;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 30px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .container .card {
   background-color: #fff;
@@ -69,19 +80,21 @@ li {
   text-decoration: none;
   color: #000;
   position: relative;
-  height: 251px;
 }
 .container .card .card__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 15px;
 }
 .container .card .card__image {
-  height: 75%;
+  height: 185px;
 }
 .container .card .card__image img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 15px 15px 0px 0px;
 }
 .container .card .card__badge {
@@ -101,23 +114,23 @@ li {
   height: 30px;
   position: absolute;
   right: 20px;
-  bottom: 20px;
+  bottom: 25px;
   font-size: 30px;
+  opacity: 1;
+}
+.container .card .card__rating:hover .fas {
   opacity: 1;
 }
 .container .card .fas {
   transition: all 0.5s;
   width: 30px;
   position: absolute;
-  bottom: -3px;
+  bottom: -2px;
   color: transparent;
   background-image: linear-gradient(0deg, #9356DC, #FF79DA);
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
-}
-.container .card:hover .fas {
-  opacity: 1;
 }
 
 footer {
@@ -161,16 +174,15 @@ footer nav a .fa-utensils {
   position: fixed;
   display: grid;
   place-items: center;
-  background-color: rgba(153, 226, 220, 0.3294117647);
+  background-color: rgba(255, 255, 255, 0.9);
   height: 100vh;
   inset: 0;
   z-index: 1;
-  opacity: 1;
   animation: disappear 200ms 3s forwards;
 }
 .loader span {
   animation: spin 3s infinite linear;
-  color: rgb(242, 188, 242);
+  color: #ff79da;
 }
 
 @keyframes disappear {
@@ -338,16 +350,17 @@ h5 {
   color: black;
 }
 .card__content2 .card__rating2 {
-  padding: 10px;
-  position: relative;
-  display: flex;
+  margin-right: -278px;
 }
 .card__content2 .info__prix2 {
-  margin-right: 15px;
+  position: relative;
 }
 .card__content2 .info__check {
   background-color: #99E2D0;
   border-radius: 0px 15px 15px 0px;
+  margin-right: -266px;
+  overflow: hidden;
+  position: absolute;
 }
 
 .button2 {
