--- a/sass/pages/accueil/_restaurant.scss
+++ b/sass/pages/accueil/_restaurant.scss
@@ -1,26 +1,32 @@
-.container {
+.restaurants {
     background-color: #f3f3f3;
+}
+.container {
     display: flex;
     flex-direction: column;
     gap: 30px;
     padding: 30px;
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
     .card {
         background-color: #fff;
         border-radius: 20px;
         text-decoration: none;
         color: #000;
         position: relative;
-        height: 251px;
         .card__content {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 15px;
         }
         .card__image {
-            height: 75%;
+            height: 185px;
             img {
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
                 border-radius: 15px 15px 0px 0px;
                 }
         }  
@@ -41,15 +47,18 @@
             height: 30px;
             position: absolute;
             right: 20px;
-            bottom: 20px;
+            bottom: 25px;
             font-size: 30px;
             opacity: 1;
+            &:hover .fas {
+                opacity: 1;
+            }
         }
         .fas {
             transition: all 0.5s;
             width: 30px;
             position: absolute;
-            bottom: -3px;
+            bottom: -2px;
             color: transparent;
             background-image: linear-gradient(0deg, #9356DC, #FF79DA);
             background-clip: text;
@@ -57,9 +66,7 @@
             opacity: 0;
         }
 
-        &:hover .fas {
-            opacity: 1;
-        }
+        
         } 
 }
 
