--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -84,8 +84,8 @@ h5 {
     align-items: center;
     border-radius: 15.04px;
     background-color: white;
-    padding: 16px;
-    margin: 16px 0;
+    padding: 7px;
+    margin: 10px 33px;
     h6 {
         font-family: roboto;
         font-weight: bold;
@@ -99,23 +99,36 @@ h5 {
         line-height: 17.63px;
         color: black;
     }
-    .card__rating2 {
-       margin-right: -278px;
-    }
+    
     .info__prix2 {
         position: relative;
+        font-weight: 700;
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    .check {
+        display: flex;
+        align-items: center;
+        overflow: hidden;
     }
     .info__check {
         background-color: #99E2D0;
         border-radius: 0px 15px 15px 0px;
-        margin-right: -266px;
         overflow: hidden;
         position: absolute;
+        height: 53px;
+        display: flex;
+        align-self: center;
     }
 }
 
 .button2 {
     padding: 40px;
+    text-align: center;
+    margin-right: 80px;
+    &:hover {
+        opacity: 0.7;
+    }
     .button__btn2 {
         padding: 12px 24px;
         font-weight: 500;
