--- a/sass/main.css
+++ b/sass/main.css
@@ -21,7 +21,7 @@ header .logo a img {
   margin-left: 20px;
 }
 
-.fonction__icons {
+.fonction__icon {
   display: flex;
   flex-direction: column;
   background-color: #fff;
@@ -30,6 +30,11 @@ header .logo a img {
   margin: 0;
   padding: 0;
   gap: 25px;
+}
+@media screen and (min-width: 1024px) {
+  .fonction__icon {
+    flex-direction: row;
+  }
 }
 
 .fonction__number {
@@ -74,30 +79,38 @@ li {
   margin-left: auto;
   margin-right: auto;
 }
-.container .card {
+@media screen and (min-width: 1024px) {
+  .container .containerCardRestaurant {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 25px;
+  }
+}
+.container .containerCardRestaurant .card {
   background-color: #fff;
   border-radius: 20px;
   text-decoration: none;
   color: #000;
   position: relative;
 }
-.container .card .card__content {
+.container .containerCardRestaurant .card .card__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px;
 }
-.container .card .card__image {
+.container .containerCardRestaurant .card .card__image {
   height: 185px;
 }
-.container .card .card__image img {
+.container .containerCardRestaurant .card .card__image img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px 15px 0px 0px;
 }
-.container .card .card__badge {
+.container .containerCardRestaurant .card .card__badge {
   background-color: #99e2d0;
   color: #008766;
   border-radius: 3px;
@@ -109,7 +122,7 @@ li {
   top: 20px;
   right: 20px;
 }
-.container .card .card__rating {
+.container .containerCardRestaurant .card .card__rating {
   width: 22px;
   height: 30px;
   position: absolute;
@@ -118,10 +131,10 @@ li {
   font-size: 30px;
   opacity: 1;
 }
-.container .card .card__rating:hover .fas {
+.container .containerCardRestaurant .card .card__rating:hover .fas {
   opacity: 1;
 }
-.container .card .fas {
+.container .containerCardRestaurant .card .fas {
   transition: all 0.5s;
   width: 30px;
   position: absolute;
@@ -330,17 +343,19 @@ h5 {
 .card__content2 {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   border-radius: 15.04px;
   background-color: white;
-  padding: 7px;
-  margin: 10px 33px;
+  margin: 10px 16px;
+  overflow: hidden;
 }
 .card__content2 h6 {
   font-family: roboto;
   font-weight: bold;
   font-size: 18px;
   color: black;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 .card__content2 .card__subtile2 {
   font-family: roboto;
@@ -348,26 +363,31 @@ h5 {
   font-size: 15.04px;
   line-height: 17.63px;
   color: black;
+  margin-left: 10px;
 }
 .card__content2 .info__prix2 {
   position: relative;
   font-weight: 700;
-  display: flex;
-  flex-direction: row-reverse;
-}
-.card__content2 .check {
-  display: flex;
-  align-items: center;
-  overflow: hidden;
 }
 .card__content2 .info__check {
   background-color: #99E2D0;
   border-radius: 0px 15px 15px 0px;
   overflow: hidden;
-  position: absolute;
-  height: 53px;
+  position: relative;
+  height: 52px;
+  color: white;
+  margin-right: -40px;
+  width: 40px;
+  margin-bottom: -4px;
+  transition: margin-right 0.5s;
+}
+.card__content2 .fa-circle-check::before {
   display: flex;
-  align-self: center;
+  justify-content: center;
+  margin-top: 18px;
+}
+.card__content2:hover .info__check {
+  margin-right: 0px;
 }
 
 .button2 {
