--- a/sass/pages/accueil/_fonction.scss
+++ b/sass/pages/accueil/_fonction.scss
@@ -8,7 +8,7 @@
         }
     }
 }
-.fonction__icons {
+.fonction__icon {
     display: flex;
     flex-direction: column;
     background-color:#fff ;
@@ -18,6 +18,9 @@
     margin: 0;
     padding: 0;
     gap: 25px;
+    @media screen and (min-width: 1024px) {
+        flex-direction: row;
+    }  
 }
 
 .fonction__number {
