--- a/sass/pages/accueil/_restaurant.scss
+++ b/sass/pages/accueil/_restaurant.scss
@@ -9,6 +9,15 @@
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
+.containerCardRestaurant {
+
+    @media screen and (min-width: 1024px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 25px;
+    }  
+
     .card {
         background-color: #fff;
         border-radius: 20px;
@@ -68,6 +77,7 @@
 
         
         } 
+    }
 }
 
 
