--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -1,9 +1,9 @@
 //images des autres pages//
 .en-tete {
-    height: 275px;
-    object-fit: cover;
     img {
-        width: 100%;    
+        width: 100%;
+        height: 400px;
+        object-fit: cover;    
     }
 }
 
@@ -26,12 +26,21 @@
     border-radius: 45px 45px 0px 0px;
     margin-top: -64px;
     position: relative;
+    max-width: 1040px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 
 //autres pages//
 .info-title { 
-    h4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding: 35px;
+    h1 {
         font-family: shrikhand;
         font-weight: 400;
         font-style: italic;
@@ -43,22 +52,17 @@
     }
     .far {
         color: black;
-        margin-top: -34px;
-        margin-left: 366px;
-        position: absolute;
         font-size: xx-large;
         opacity: 1;
     }
     .fas {
         transition: all 0.5s;
-        position: absolute;
         color: transparent;
         background-image: linear-gradient(0deg, #9356DC, #FF79DA);
         background-clip: text;
         -webkit-background-clip: text;
         opacity: 0;
-        margin-top: -34px;
-        margin-left: 366px;
+        margin-left: -62px;
         font-size: xx-large;
     }
     &:hover .fas {
@@ -66,7 +70,7 @@
     }
 }
 
-h5 {
+h2 {
     font-family: roboto;
     font-size: 16px;
     font-weight: 300;
@@ -86,7 +90,7 @@ h5 {
     background-color: white;
     margin: 10px 16px;
     overflow: hidden;
-    h6 {
+    h3 {
         font-family: roboto;
         font-weight: bold;
         font-size: 18px;
