--- a/sass/pages/accueil/_fonction.scss
+++ b/sass/pages/accueil/_fonction.scss
@@ -43,12 +43,12 @@ ul {
 }
 
 li {
+    width: 30%;
     display: list-item;
     background-color: #f6f6f6;
     box-shadow: 0 4px 8px 5px #fff;
     border-radius: 20px;
     padding: 30px 35px;
-    margin: 16px 26px;
     transition: 3s;
 }
 
