--- a/sass/pages/accueil/_restaurant.scss
+++ b/sass/pages/accueil/_restaurant.scss
@@ -2,13 +2,11 @@
     background-color: #f3f3f3;
 }
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
     padding: 30px;
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
+
 .containerCardRestaurant {
 
     @media screen and (min-width: 1024px) {
@@ -19,11 +17,13 @@
     }  
 
     .card {
+        display: block;
         background-color: #fff;
         border-radius: 20px;
         text-decoration: none;
         color: #000;
         position: relative;
+        margin-bottom: 20px;
         .card__content {
             display: flex;
             justify-content: space-between;
@@ -74,8 +74,6 @@
             -webkit-background-clip: text;
             opacity: 0;
         }
-
-        
         } 
     }
 }
