--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -82,6 +82,11 @@ h5 {
     padding-left: 20px;
 }
 
+.entree {
+   transform: translatey(20px);
+   transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
 .card__content2 {
     display: flex;
     justify-content: space-between;
@@ -90,6 +95,7 @@ h5 {
     background-color: white;
     margin: 10px 16px;
     overflow: hidden;
+    box-shadow: #686868 0 1px 4px;
     h6 {
         font-family: roboto;
         font-weight: bold;
@@ -129,6 +135,16 @@ h5 {
     }
     &:hover .info__check {
         margin-right: 0px;
+    }
+}
+
+@keyframes entree {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
     }
 }
 
