--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -41,7 +41,7 @@
     gap: 30px;
     padding: 35px;
     h1 {
-        font-family: shrikhand;
+        font-family: 'Shrikhand', serif;
         font-weight: 400;
         font-style: italic;
         font-size: 28px;
@@ -70,23 +70,45 @@
     }
 }
 
-h5 {
-    font-family: roboto;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 18.75px;
-    margin-bottom: 25px;
-    color: black;
-    text-decoration: underline 3px solid #99e2d0;
-    padding-top: 28px;
-    padding-left: 20px;
+.title2 {
+    h2 {
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 18.75px;
+        margin-bottom: 25px;
+        color: black;
+        text-decoration: underline 3px solid #99e2d0;
+        padding-top: 28px;
+        padding-left: 20px;
+    }
+}
+
+.entree, .plat, .dessert {
+    animation: menu;
+    animation-duration: 1s;
+    animation-fill-mode: both;
 }
 
 .entree {
-   transform: translatey(20px);
-   transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  animation-delay: 0.5s;
 }
 
+.plat {
+    animation-delay: 1s;
+}
+
+.dessert {
+    animation-duration: 1.5s;
+}
+
+@keyframes menu {
+    0% {
+        opacity: 0;
+    }
+    100% {
+       opacity: 1;
+    }
+}
 .card__content2 {
     display: flex;
     justify-content: space-between;
@@ -95,8 +117,8 @@ h5 {
     background-color: white;
     margin: 10px 16px;
     overflow: hidden;
-    box-shadow: #686868 0 1px 4px;
-    h6 {
+    box-shadow: rgba(149, 157, 165,0.2) 0px 8px 24px;
+    h3 {
         font-family: roboto;
         font-weight: bold;
         font-size: 18px;
@@ -105,7 +127,6 @@ h5 {
         margin-left: 10px;
     }
     .card__subtile2 {
-        font-family: roboto;
         font-weight: 300;
         font-size: 15.04px;
         line-height: 17.63px;
@@ -138,15 +159,6 @@ h5 {
     }
 }
 
-@keyframes entree {
-    0% {
-        opacity: 1;
-        transform: scale(1);
-    }
-    100% {
-        transform: scale(0);
-    }
-}
 
 .button2 {
     padding: 40px;
