--- a/sass/_stylePagesRestaurants.scss
+++ b/sass/_stylePagesRestaurants.scss
@@ -98,7 +98,7 @@
 }
 
 .dessert {
-    animation-duration: 1.5s;
+    animation-delay: 1.5s;
 }
 
 @keyframes menu {
@@ -112,12 +112,15 @@
 .card__content2 {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     border-radius: 15.04px;
     background-color: white;
     margin: 10px 16px;
     overflow: hidden;
     box-shadow: rgba(149, 157, 165,0.2) 0px 8px 24px;
+.card__txt2 {
+    width: 70%;
+}
     h3 {
         font-family: roboto;
         font-weight: bold;
@@ -132,6 +135,11 @@
         line-height: 17.63px;
         color: black;
         margin-left: 10px;
+    }
+    &:hover h3 .card__subtile2 {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        text-wrap: nowrap;
     }
     .info__prix2 {
         position: relative;
