--- a/sass/main.css
+++ b/sass/main.css
@@ -396,7 +396,7 @@ h2 {
 }
 
 .dessert {
-  animation-duration: 1.5s;
+  animation-delay: 1.5s;
 }
 
 @keyframes menu {
@@ -410,12 +410,15 @@ h2 {
 .card__content2 {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   border-radius: 15.04px;
   background-color: white;
   margin: 10px 16px;
   overflow: hidden;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.card__content2 .card__txt2 {
+  width: 70%;
 }
 .card__content2 h3 {
   font-family: roboto;
@@ -431,6 +434,11 @@ h2 {
   line-height: 17.63px;
   color: black;
   margin-left: 10px;
+}
+.card__content2:hover h3 .card__subtile2 {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-wrap: nowrap;
 }
 .card__content2 .info__prix2 {
   position: relative;
